# argus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bootstrap.sh  pyproject.toml
argus/: __init__.py
argus/defenses/: __init__.py
argus/defenses/audit_namespace_guard/: __init__.py  guard.py  registry.py
argus/defenses/intent_critic/: __init__.py  critic.py  prompts.py
data/probes/: argus_eval_v1.jsonl  corpus_v1_adversarial.jsonl
examples/: quickstart.py  run_eval.py
infra/: .env.example  INTEGRATION.md  Makefile  README.md  docker-compose.yml  mcp-servers.yaml
infra/gitea/: README.md  setup.sh
infra/keycloak/: CHANGES.md  configure-master-realm.sh  configure-realm-events.sh  realm.json
infra/minio/: INVESTIGATION.md  bucket_policies.yaml  setup_personas.sh
infra/postgres/: enable_pg_stat_statements.sh
infra/postgres/initdb/: 01_schema.sql  02_seed.sql
tests/: test_critic.py  test_guard.py
