[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-safety"
version = "0.1.0"
description = "Enterprise-IAM agentic-safety substrate for LLM safety research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sean Todd" },
]
keywords = [
    "llm",
    "agentic-safety",
    "llm-safety",
    "agentic-llm",
    "iam",
    "mlx",
    "apple-silicon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "mlx-lm>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://proband.xyz/argus"
Repository = "https://github.com/proband-xyz/argus"
Models = "https://huggingface.co/proband-xyz"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.setuptools.package-data]
argus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
